@startuml
class User {
  +id: int
  +name: string
  +email: string
  +is_admin: bool
}

class Apartment {
  +id: int
  +type: string
  +address: string
  +price: decimal
  +area: int
}

class RentalAgreement {
  +id: int
  +apartment_id: int
  +tenant_id: int
  +start_date: date
  +end_date: date?
}

User "1" <-- "0..*" RentalAgreement : tenant
Apartment "1" <-- "0..*" RentalAgreement : property
@enduml
